Renamed Dwarf Planets

--- a/GameData/KPlus/DwarfPlanets/Corote/Corote.cfg
+++ b/GameData/KPlus/DwarfPlanets/Corote/Corote.cfg
@@ -2,8 +2,8 @@
 {
     Body
     {
-		name = Corolet
-		cacheFile = KPlus/Cache/Corolet.bin
+		name = Corote
+		cacheFile = KPlus/Cache/Corote.bin
 		Template
 		{
 			name = Minmus
@@ -29,7 +29,7 @@
 			initialRotation = 0
 			timewarpAltitudeLimits = 0 5000 7500 10000 15000 50000 200000 500000
 
-			biomeMap = KPlus/DwarfPlanets/Corolet/PluginData/Corolet_biome.dds
+			biomeMap = KPlus/DwarfPlanets/Corote/PluginData/Corote_biome.dds
 
             Biomes
             {
@@ -66,8 +66,8 @@
 			type = Vacuum
 			Material
 			{
-				texture = KPlus/DwarfPlanets/Corolet/Textures/Corolet_color
-				normals = KPlus/DwarfPlanets/Corolet/Textures/Corolet_normal
+				texture = KPlus/DwarfPlanets/Corote/Textures/Corote_color
+				normals = KPlus/DwarfPlanets/Corote/Textures/Corote_normal
 				shininess = 0
 				specular = 0,0,0,0
 
