--- a/GameData/KPlus/DwarfPlanets/Pregas/Pregas.cfg
+++ b/GameData/KPlus/DwarfPlanets/Pregas/Pregas.cfg
@@ -2,8 +2,8 @@
 {
     Body
     {
-		name = Pergas
-		cacheFile = KPlus/Cache/Pergas.bin
+		name = Pregas
+		cacheFile = KPlus/Cache/Pregas.bin
 		Template
 		{
 			name = Laythe
@@ -34,7 +34,7 @@
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 55000 60000 70000 100000 200000 300000 600000
 
-			biomeMap = KPlus/DwarfPlanets/Pergas/PluginData/Pergas_biome.dds
+			biomeMap = KPlus/DwarfPlanets/Pregas/PluginData/Pregas_biome.dds
 
             Biomes
             {
@@ -83,8 +83,8 @@
 
 			Material
 			{
-				texture = KPlus/DwarfPlanets/Pergas/Textures/Pergas_color
-				normals = KPlus/DwarfPlanets/Pergas/Textures/Pergas_normal
+				texture = KPlus/DwarfPlanets/Pregas/Textures/Pregas_color
+				normals = KPlus/DwarfPlanets/Pregas/Textures/Pregas_normal
 				shininess = 0.0
 				specular = 0.0,0.0,0.0,0
 
@@ -179,7 +179,7 @@
 			{
 				VertexHeightMap
 				{
-					map = KPlus/DwarfPlanets/Pergas/PluginData/Pergas_height.dds
+					map = KPlus/DwarfPlanets/Pregas/PluginData/Pregas_height.dds
 					offset = 500
 					deformity = 8000.0
 					scaleDeformityByRadius = false
