--- a/GameData/KPlus/DwarfPlanets/Vatil/Vatil.cfg
+++ b/GameData/KPlus/DwarfPlanets/Vatil/Vatil.cfg
@@ -2,8 +2,8 @@
 {
     Body
     {
-		name = Valit
-		cacheFile = KPlus/Cache/Valit.bin
+		name = Vatil
+		cacheFile = KPlus/Cache/Vatil.bin
 		Template
 		{
 			name = Gilly
@@ -23,7 +23,7 @@
 		}
 		Properties
 		{
-            description = This beautiful orange world makes Kerbal's everywhere hungry when observing it. This has lead to astronomers everywhere using the term "Valit time" to refer to the snack time taken after observing it.
+            description = This beautiful orange world makes Kerbal's everywhere hungry when observing it. This has lead to astronomers everywhere using the term "Vatil time" to refer to the snack time taken after observing it.
             radius = 310000
             geeASL = 0.8
 			rotationPeriod = 46134.589375
@@ -33,7 +33,7 @@
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 10000 15000 30000 50000 100000 200000 300000
 
-			biomeMap = KPlus/DwarfPlanets/Valit/PluginData/Valit_biome.dds
+			biomeMap = KPlus/DwarfPlanets/Vatil/PluginData/Vatil_biome.dds
 
             Biomes
             {
@@ -85,8 +85,8 @@
 
 			Material
 			{
-				texture = KPlus/DwarfPlanets/Valit/Textures/Valit_color
-				normals = KPlus/DwarfPlanets/Valit/Textures/Valit_normal
+				texture = KPlus/DwarfPlanets/Vatil/Textures/Vatil_color
+				normals = KPlus/DwarfPlanets/Vatil/Textures/Vatil_normal
 				shininess = 0
 				specular = 0.0,0.0,0.0,0
 			}
@@ -107,7 +107,7 @@
 			{
 				VertexHeightMap
 				{
-					map = KPlus/DwarfPlanets/Valit/PluginData/Valit_height.dds
+					map = KPlus/DwarfPlanets/Vatil/PluginData/Vatil_height.dds
 					offset = 2000
 					deformity = 6000.0
 					scaleDeformityByRadius = false
