--- a/GameData/KPlus/DwarfPlanets/Havet/Havet.cfg
+++ b/GameData/KPlus/DwarfPlanets/Havet/Havet.cfg
@@ -2,8 +2,8 @@
 {
     Body
     {
-		name = Harvest
-		cacheFile = KPlus/Cache/Harvest.bin
+		name = Havet
+		cacheFile = KPlus/Cache/Havet.bin
 		Template
 		{
 			name = Gilly
@@ -33,7 +33,7 @@
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 10000 15000 30000 50000 100000 200000 300000
 
-			biomeMap = KPlus/DwarfPlanets/Harvest/PluginData/Harvest_biome.dds
+			biomeMap = KPlus/DwarfPlanets/Havet/PluginData/Havet_biome.dds
 
             Biomes
             {
@@ -85,8 +85,8 @@
 
 			Material
 			{
-				texture = KPlus/DwarfPlanets/Harvest/Textures/Harvest_color
-				normals = KPlus/DwarfPlanets/Harvest/Textures/Harvest_normal
+				texture = KPlus/DwarfPlanets/Havet/Textures/Havet_color
+				normals = KPlus/DwarfPlanets/Havet/Textures/Havet_normal
 				shininess = 0
 				specular = 0.0,0.0,0.0,0
 
@@ -108,7 +108,7 @@
 			{
 				VertexHeightMap
 				{
-					map = KPlus/DwarfPlanets/Harvest/PluginData/Harvest_height.dds
+					map = KPlus/DwarfPlanets/Havet/PluginData/Havet_height.dds
 					offset = -1000
 					deformity = 9500.0
 					scaleDeformityByRadius = false
