--- a/GameData/KPlus/DwarfPlanets/Kalas/Kalas.cfg
+++ b/GameData/KPlus/DwarfPlanets/Kalas/Kalas.cfg
@@ -2,8 +2,8 @@
 {
     Body
     {
-		name = Kralaus
-		cacheFile = KPlus/Cache/Kralaus.bin
+		name = Kalas
+		cacheFile = KPlus/Cache/Kalas.bin
 		Template
 		{
 			name = Gilly
@@ -33,7 +33,7 @@
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 10000 15000 30000 50000 100000 200000 300000
 
-			biomeMap = KPlus/DwarfPlanets/Kralaus/PluginData/Kralaus_biome.dds
+			biomeMap = KPlus/DwarfPlanets/Kalas/PluginData/Kalas_biome.dds
 
             Biomes
             {
@@ -85,8 +85,8 @@
 
 			Material
 			{
-				texture = KPlus/DwarfPlanets/Kralaus/Textures/Kralaus_color
-				normals = KPlus/DwarfPlanets/Kralaus/Textures/Kralaus_normal
+				texture = KPlus/DwarfPlanets/Kalas/Textures/Kalas_color
+				normals = KPlus/DwarfPlanets/Kalas/Textures/Kalas_normal
 				shininess = 0.0
 				specular = 0.0,0.0,0.0,0
 
@@ -103,7 +103,7 @@
 			{
 				VertexHeightMap
 				{
-					map = KPlus/DwarfPlanets/Kralaus/PluginData/Kralaus_height.dds
+					map = KPlus/DwarfPlanets/Kalas/PluginData/Kalas_height.dds
 					offset = 0
 					deformity = 14000.0
 					scaleDeformityByRadius = false
