--- a/GameData/KPlus/PlanetShine.cfg
+++ b/GameData/KPlus/PlanetShine.cfg
@@ -3,7 +3,7 @@
 
 PlanetshineCelestialBody
 {
-	name = Harvest
+	name = Havet
 	color = 143,108,55
 	intensity = 1
 	atmosphereAmbient = 0.2
@@ -11,7 +11,7 @@ PlanetshineCelestialBody
 }
 PlanetshineCelestialBody
 {
-	name = Valit
+	name = Vatil
 	color = 153,97,50
 	intensity = 1
 	atmosphereAmbient = 0.2
@@ -19,7 +19,7 @@ PlanetshineCelestialBody
 }
 PlanetshineCelestialBody
 {
-	name = Pergas
+	name = Pregas
 	color = 28,74,76
 	intensity = 1
 	atmosphereAmbient = 1
@@ -27,7 +27,7 @@ PlanetshineCelestialBody
 }
 PlanetshineCelestialBody
 {
-	name = Kralaus
+	name = Kalas
 	color = 142,48,48
 	intensity = 1
 	atmosphereAmbient = 0.2
@@ -35,7 +35,7 @@ PlanetshineCelestialBody
 }
 PlanetshineCelestialBody
 {
-	name = Corolet
+	name = Corote
 	color = 30,65,108
 	intensity = 1
 	atmosphereAmbient = 0.2
