--- a/GameData/KPlus/DistantObjectEnhancement.cfg
+++ b/GameData/KPlus/DistantObjectEnhancement.cfg
@@ -3,27 +3,27 @@
 
 CelestialBodyColor
 {
-	name = Harvest
+	name = Havet
 	color = 143,108,55
 }
 CelestialBodyColor
 {
-	name = Valit
+	name = Vatil
 	color = 153,97,50
 }
 CelestialBodyColor
 {
-	name = Pergas
+	name = Pregas
 	color = 28,74,76
 }
 CelestialBodyColor
 {
-	name = Kralaus
+	name = Kalas
 	color = 142,48,48
 }
 CelestialBodyColor
 {
-	name = Corolet
+	name = Corote
 	color = 30,65,108
 }
 CelestialBodyColor
