On-Demand Loading

--- a/GameData/KPlus/DwarfPlanets/Corote/Corote.cfg
+++ b/GameData/KPlus/DwarfPlanets/Corote/Corote.cfg
@@ -66,8 +66,8 @@
 			type = Vacuum
 			Material
 			{
-				texture = KPlus/DwarfPlanets/Corote/Textures/Corote_color
-				normals = KPlus/DwarfPlanets/Corote/Textures/Corote_normal
+				texture = KPlus/DwarfPlanets/Corote/PluginData/Corote_color.dds
+				normals = KPlus/DwarfPlanets/Corote/PluginData/Corote_normal.dds
 				shininess = 0
 				specular = 0,0,0,0
 
