--- a/GameData/KPlus/DwarfPlanets/Havet/Havet.cfg
+++ b/GameData/KPlus/DwarfPlanets/Havet/Havet.cfg
@@ -85,8 +85,8 @@
 
 			Material
 			{
-				texture = KPlus/DwarfPlanets/Havet/Textures/Havet_color
-				normals = KPlus/DwarfPlanets/Havet/Textures/Havet_normal
+				texture = KPlus/DwarfPlanets/Havet/PluginData/Havet_color.dds
+				normals = KPlus/DwarfPlanets/Havet/PluginData/Havet_normal.dds
 				shininess = 0
 				specular = 0.0,0.0,0.0,0
 
