--- a/GameData/KPlus/DwarfPlanets/Kalas/Kalas.cfg
+++ b/GameData/KPlus/DwarfPlanets/Kalas/Kalas.cfg
@@ -85,8 +85,8 @@
 
 			Material
 			{
-				texture = KPlus/DwarfPlanets/Kalas/Textures/Kalas_color
-				normals = KPlus/DwarfPlanets/Kalas/Textures/Kalas_normal
+				texture = KPlus/DwarfPlanets/Kalas/PluginData/Kalas_color.dds
+				normals = KPlus/DwarfPlanets/Kalas/PluginData/Kalas_normal.dds
 				shininess = 0.0
 				specular = 0.0,0.0,0.0,0
 
