--- a/GameData/KPlus/DwarfPlanets/Pregas/Pregas.cfg
+++ b/GameData/KPlus/DwarfPlanets/Pregas/Pregas.cfg
@@ -83,8 +83,8 @@
 
 			Material
 			{
-				texture = KPlus/DwarfPlanets/Pregas/Textures/Pregas_color
-				normals = KPlus/DwarfPlanets/Pregas/Textures/Pregas_normal
+				texture = KPlus/DwarfPlanets/Pregas/PluginData/Pregas_color.dds
+				normals = KPlus/DwarfPlanets/Pregas/PluginData/Pregas_normal.dds
 				shininess = 0.0
 				specular = 0.0,0.0,0.0,0
 
