--- a/GameData/KPlus/DwarfPlanets/Vatil/Vatil.cfg
+++ b/GameData/KPlus/DwarfPlanets/Vatil/Vatil.cfg
@@ -85,8 +85,8 @@
 
 			Material
 			{
-				texture = KPlus/DwarfPlanets/Vatil/Textures/Vatil_color
-				normals = KPlus/DwarfPlanets/Vatil/Textures/Vatil_normal
+				texture = KPlus/DwarfPlanets/Vatil/PluginData/Vatil_color.dds
+				normals = KPlus/DwarfPlanets/Vatil/PluginData/Vatil_normal.dds
 				shininess = 0
 				specular = 0.0,0.0,0.0,0
 			}
