--- a/GameData/KPlus/SarinSystem/Fosno/Fosno.cfg
+++ b/GameData/KPlus/SarinSystem/Fosno/Fosno.cfg
@@ -90,8 +90,8 @@
 
 			Material
 			{
-				texture = KPlus/SarinSystem/Fosno/Textures/Fosno_color
-				normals = KPlus/SarinSystem/Fosno/Textures/Fosno_normal
+				texture = KPlus/SarinSystem/Fosno/PluginData/Fosno_color.dds
+				normals = KPlus/SarinSystem/Fosno/PluginData/Fosno_normal.dds
 				shininess = 0
 				specular = 0.1,0.1,0.1,0
 
