--- a/GameData/KPlus/SarinSystem/Moonlets/S1.cfg
+++ b/GameData/KPlus/SarinSystem/Moonlets/S1.cfg
@@ -67,8 +67,8 @@
 		{
 			Material
 			{
-				texture = KPlus/SarinSystem/Moonlets/Textures/S1_color
-				normals = KPlus/SarinSystem/Moonlets/Textures/S1_normal
+				texture = KPlus/SarinSystem/Moonlets/PluginData/S1_color.dds
+				normals = KPlus/SarinSystem/Moonlets/PluginData/S1_normal.dds
 				shininess = 0
 				specular = 0,0,0,0
 
