--- a/GameData/KPlus/SarinSystem/Moonlets/S2.cfg
+++ b/GameData/KPlus/SarinSystem/Moonlets/S2.cfg
@@ -67,8 +67,8 @@
 		{
 			Material
 			{
-				texture = KPlus/SarinSystem/Moonlets/Textures/S2_color
-				normals = KPlus/SarinSystem/Moonlets/Textures/S2_normal
+				texture = KPlus/SarinSystem/Moonlets/PluginData/S2_color.dds
+				normals = KPlus/SarinSystem/Moonlets/PluginData/S2_normal.dds
 				shininess = 0
 				specular = 0,0,0,0
 			}
