--- a/GameData/KPlus/SarinSystem/Moonlets/S3.cfg
+++ b/GameData/KPlus/SarinSystem/Moonlets/S3.cfg
@@ -67,8 +67,8 @@
 		{
 			Material
 			{
-				texture = KPlus/SarinSystem/Moonlets/Textures/S3_color
-				normals = KPlus/SarinSystem/Moonlets/Textures/S3_normal
+				texture = KPlus/SarinSystem/Moonlets/PluginData/S3_color.dds
+				normals = KPlus/SarinSystem/Moonlets/PluginData/S3_normal.dds
 				shininess = 0
 				specular = 0,0,0,0
 			}
