--- a/GameData/KPlus/SarinSystem/Moonlets/S4.cfg
+++ b/GameData/KPlus/SarinSystem/Moonlets/S4.cfg
@@ -67,8 +67,8 @@
 		{
 			Material
 			{
-				texture = KPlus/SarinSystem/Moonlets/Textures/S4_color
-				normals = KPlus/SarinSystem/Moonlets/Textures/S4_normal
+				texture = KPlus/SarinSystem/Moonlets/PluginData/S4_color.dds
+				normals = KPlus/SarinSystem/Moonlets/PluginData/S4_normal.dds
 				shininess = 0
 				specular = 0,0,0,0
 			}
