--- a/GameData/KPlus/SarinSystem/Pottus/Pottus.cfg
+++ b/GameData/KPlus/SarinSystem/Pottus/Pottus.cfg
@@ -98,8 +98,8 @@
 
 			Material
 			{
-				texture = KPlus/SarinSystem/Pottus/Textures/Pottus_color
-				normals = KPlus/SarinSystem/Pottus/Textures/Pottus_normal
+				texture = KPlus/SarinSystem/Pottus/PluginData/Pottus_color.dds
+				normals = KPlus/SarinSystem/Pottus/PluginData/Pottus_normal.dds
 				shininess = 0
 				specular = 0,0,0,0
 
