--- a/GameData/KPlus/SarinSystem/Sarin/Sarin.cfg
+++ b/GameData/KPlus/SarinSystem/Sarin/Sarin.cfg
@@ -74,7 +74,7 @@
 
             Material
             {
-                texture = KPlus/SarinSystem/Sarin/Textures/Sarin_color
+                texture = KPlus/SarinSystem/Sarin/PluginData/Sarin_color.dds
                 shininess = 0.1
                 specular = 0.2,0.2,0.2,1.0
 
