--- a/GameData/KPlus/SarinSystem/Daphne/Daphne.cfg
+++ b/GameData/KPlus/SarinSystem/Daphne/Daphne.cfg
@@ -91,8 +91,8 @@
 
 			Material
 			{
-				texture = KPlus/SarinSystem/Daphne/Textures/Daphne_color
-				normals = KPlus/SarinSystem/Daphne/Textures/Daphne_normal
+				texture = KPlus/SarinSystem/Daphne/PluginData/Daphne_color.dds
+				normals = KPlus/SarinSystem/Daphne/PluginData/Daphne_normal.dds
 				shininess = 0
 				specular = 0.00,0.00,0.00,0
 			}
