--- a/GameData/KPlus/SarinSystem/Shay/Shay.cfg
+++ b/GameData/KPlus/SarinSystem/Shay/Shay.cfg
@@ -91,8 +91,8 @@
 
 			Material
 			{
-				texture = KPlus/SarinSystem/Shay/Textures/Shay_color
-				normals = KPlus/SarinSystem/Shay/Textures/Shay_normal
+				texture = KPlus/SarinSystem/Shay/PluginData/Shay_color.dds
+				normals = KPlus/SarinSystem/Shay/PluginData/Shay_normal.dds
 				shininess = 0
 				specular = 0,0,0,0
 			}
