--- a/GameData/KPlus/SarinSystem/Shay/Shay.cfg
+++ b/GameData/KPlus/SarinSystem/Shay/Shay.cfg
@@ -1,78 +1,78 @@
 @Kopernicus:AFTER[Kopernicus]:NEEDS[!KerbolPlus]
 {
-    Body
-    {
+	Body
+	{
 		name = Shay
 		cacheFile = KPlus/Cache/Shay.bin
 		Template
 		{
-            name = Eeloo
+			name = Eeloo
 			removePQSMods = PQSLandControl
-        }
+		}
 		Orbit
 		{
-            referenceBody = Sarin
-            inclination = 20.3
-            eccentricity = -0.1
-            semiMajorAxis = 171585059.460315
-            longitudeOfAscendingNode = 55
-            argumentOfPeriapsis = 0
-            meanAnomalyAtEpoch = 1.1
-            epoch = 1343.91
-            color = 0.7,0.7,0.7,1.0
+			referenceBody = Sarin
+			inclination = 20.3
+			eccentricity = -0.1
+			semiMajorAxis = 171585059.460315
+			longitudeOfAscendingNode = 55
+			argumentOfPeriapsis = 0
+			meanAnomalyAtEpoch = 1.1
+			epoch = 1343.91
+			color = 0.7,0.7,0.7,1.0
 		}
 		Properties
 		{
-            description = This poor disfigured moon seems to be home of some extremely large impacts from aeons ago. It's large craters have long since frozen over with ice from the core of this moon.
-            radius = 100000
-            geeASL = 0.1
+			description = This poor disfigured moon seems to be home of some extremely large impacts from aeons ago. It's large craters have long since frozen over with ice from the core of this moon.
+			radius = 100000
+			geeASL = 0.1
 			rotationPeriod = 44029
 			rotates = true
 			tidallyLocked = false
 			initialRotation = 0
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 10000 15000 30000 50000 100000 200000 300000
-
+			
 			biomeMap = KPlus/SarinSystem/Shay/PluginData/Shay_biome.dds
-
-            Biomes
-            {
-                Biome
-                {
-                    name = Lower Rockbeds
-                    value = 1.0
-                    color = 0,0,0,1
-                }
-                Biome
-                {
-                    name = Upper Rockbeds
-                    value = 1.0
-                    color = 1,0,0,1
-                }
-                Biome
-                {
-                    name = Lower Icesheets
-                    value = 1.0
-                    color = 0,1,0,1
-                }
-                Biome
-                {
-                    name = Dark Ice
-                    value = 1.0
-                    color = 0,0,1,1
-                }
-                Biome
-                {
-                    name = Dark Slopes
-                    value = 1.0
-                    color = 1,1,0,1
-                }
-                Biome
-                {
-                    name = Upper Icesheets
-                    value = 1.0
-                    color = 1,0,1,1
-                }
+			
+			Biomes
+			{
+				Biome
+				{
+					name = Lower Rockbeds
+					value = 1.0
+					color = 0,0,0,1
+				}
+				Biome
+				{
+					name = Upper Rockbeds
+					value = 1.0
+					color = 1,0,0,1
+				}
+				Biome
+				{
+					name = Lower Icesheets
+					value = 1.0
+					color = 0,1,0,1
+				}
+				Biome
+				{
+					name = Dark Ice
+					value = 1.0
+					color = 0,0,1,1
+				}
+				Biome
+				{
+					name = Dark Slopes
+					value = 1.0
+					color = 1,1,0,1
+				}
+				Biome
+				{
+					name = Upper Icesheets
+					value = 1.0
+					color = 1,0,1,1
+				}
 			}				
 			ScienceValues
 			{
@@ -88,7 +88,7 @@
 			type = Vacuum
 			fadeStart = 90000
 			fadeEnd = 0
-
+			
 			Material
 			{
 				texture = KPlus/SarinSystem/Shay/PluginData/Shay_color.dds
@@ -97,12 +97,12 @@
 				specular = 0,0,0,0
 			}
 		}
-         PQS
-        {
-            minLevel = 2
-            maxLevel = 8
-
-            Mods
+		PQS
+		{
+			minLevel = 2
+			maxLevel = 8
+			
+			Mods
 			{
 				VertexHeightMap
 				{
@@ -113,55 +113,67 @@
 					order = 20
 					enabled = true
 				}
-                HeightColorMap
-                {
-                    blend = 1
-                    order = 200
-                    enabled = true
-                    LandClasses
-                    {
-                        Class
-                        {
-                            name = Depths
-                            altitudeStart = 0.0
-                            altitudeEnd = 0.2
-                            color = 0.0,0.0,0.0,1.0
-                            lerpToNext = true
-                        }
-                        Class
-                        {
-                            name = Base
-                            altitudeStart = 0.2
-                            altitudeEnd = 0.3
-                            color = 0.4,0.35,0.3,1.0
-                            lerpToNext = true
-                        }
-                        Class
-                        {
-                            name = Mid
-                            altitudeStart = 0.3
-                            altitudeEnd = 0.5
-                            color = 0.6,0.6,0.6,1.0
-                            lerpToNext = true
-                        }
-                        Class
-                        {
-                            name = High
-                            altitudeStart = 0.5
-                            altitudeEnd = 0.7
-                            color = 0.2,0.2,0.2,1.0
-                            lerpToNext = true
-                        }
-                        Class
-                        {
-                            name = Peaks
-                            altitudeStart = 0.5
-                            altitudeEnd = 10.0	
-                            color = 0.7,0.7,0.7,1.0
-                            lerpToNext = false
-                        }
-                    }
-                }
+				HeightColorMap
+				{
+					blend = 1
+					order = 200
+					enabled = true
+					LandClasses
+					{
+						Class
+						{
+							name = Depths
+							altitudeStart = 0.0
+							altitudeEnd = 0.2
+							color = 0.0,0.0,0.0,1.0
+							lerpToNext = true
+						}
+						Class
+						{
+							name = Base
+							altitudeStart = 0.2
+							altitudeEnd = 0.3
+							color = 0.4,0.35,0.3,1.0
+							lerpToNext = true
+						}
+						Class
+						{
+							name = Mid
+							altitudeStart = 0.3
+							altitudeEnd = 0.5
+							color = 0.6,0.6,0.6,1.0
+							lerpToNext = true
+						}
+						Class
+						{
+							name = High
+							altitudeStart = 0.5
+							altitudeEnd = 0.7
+							color = 0.2,0.2,0.2,1.0
+							lerpToNext = true
+						}
+						Class
+						{
+							name = Peaks
+							altitudeStart = 0.5
+							altitudeEnd = 10.0	
+							color = 0.7,0.7,0.7,1.0
+							lerpToNext = false
+						}
+					}
+				}
+				FlattenArea
+				{
+					DEBUG_showColors = False
+					flattenTo = 1850
+					innerRadius = 250
+					outerRadius = 600
+					position = 0.0177,101799,3.1E-09
+					smoothEnd = 0
+					smoothStart = 0
+					order = 25
+					enabled = True
+				}
 			}
 		}
 	}
